order post request set up and connected to swagger
