# swagger.yaml
@@ -52,6 +52,17 @@ components:
         quantity:
           type: number
 
+    Order:
+      type: object
+      properties:
+        userId:
+          type: string
+        productId:
+          type: string
+        quantity:
+          type: number
+        amount:
+          type: number
 
 paths:
 
@@ -320,5 +331,23 @@ paths:
                 $ref: "#/components/schemas/Cart"
 
 
+  /order:
+    post:
+      summary: Create a new order
+      description: Create a new order
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Order"
+      
+      responses:
+        201:
+          description: Order created successfully
+          content:
+            application/json:
+              schema:
+              $ref: "#/components/schemas/Order"
 
             
